manifests/mysql-service.tpl.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: ${namespace}
  labels:
    app: mysql
spec:
  selector:
    app: mysql
    tier: mysql
  ports:
    - protocol: TCP
      port: 3306
  clusterIP: None
