manifests/php-service.tpl.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-mysql-service
  namespace: ${namespace}
  labels:
    app: php
spec:
  selector:
    app: php
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
