manifests/php-ingress.tpl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-mysql-ingress
  namespace: ${namespace}
  annotations:
    cert-manager.io/cluster-issuer: "syndeno-issuer"
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "myqsl.plt.ko.syndeno.net"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: php-mysql-service
            port:
              number: 8080
  tls:
  - hosts: ["myqsl.plt.ko.syndeno.net"]
    secretName: "myqsl.plt.ko.syndeno.net"
